--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <head>
 <title>MiniWiki</title>
 </head>
-<body bgcolor="blue">MiniWiki / tu wiki compacta de confianza<p>
-----------------------------------------------------
+<body">MiniWiki / tu wiki compacta de confianza
+<p>----------------------------------------------------
 ejemplo_bienvenido!
 - - - - - - - - - - - - - - - - - - - - - - - - - -
 Esto es un texto de ejemplo para darte la bienvenida
 a la wiki.
-  ----------------------------------------------------</p>
+------------------------------------------------------</p>
 FIN DE LA PAGINA
 </body>
 </html>
